some tiny improvements and details